correct faculae calculation

--- a/test/samples/multispots_evo_nofac_conv.ini
+++ b/test/samples/multispots_evo_nofac_conv.ini
@@ -9,11 +9,13 @@ incl=90.0
 [spots]
 nspot=100
 cspot=0.2
-cfac=0.0
+cfac=0.2
 Q=10
 decay=true
+decay_scale = 2
+decay_offset = 1
 differential=0.185
 
 [diagram]
 init_lat=40
-cycle=80
+cycle=3000
