--- a/test/samples/onespot_evo_nofac_conv.ini
+++ b/test/samples/onespot_evo_nofac_conv.ini
@@ -8,10 +8,12 @@ incl=90.0
 
 [spots]
 nspot=1
-cspot=0.2
-cfac=0.0
+cspot=0.67
+cfac=0.115
 Q=10
 decay=true
+decay_scale = 1
+decay_offset = 1
 differential=0.185
 
 [diagram]
